erDiagram
    User ||--o{ Transaction : "имеет"
    User ||--o{ TransactionEndpoint : "владеет"
    TransactionEndpoint ||--o{ Transaction : "источник"
    TransactionEndpoint ||--o{ Transaction : "получатель"

    User {
        Guid Id PK
        String Email UK
        String FirstName
        String LastName
        String Patronymic
        String HashedPassword
        DateTime DeletedAt
    }

    TransactionEndpoint {
        Guid Id PK
        Guid UserId FK
        String Name
        Double Limitation
        Boolean IsStorage
        Double Value
        DateTime DeletedAt
    }

    Transaction {
        Guid Id PK
        Guid UserId FK
        Guid SourceAccountId FK
        Guid DestinationAccountId FK
        Double Amount
        TransactionType Type
        DateTime MadeAt
        DateTime DeletedAt
    }
